--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,6 @@
     "normativa-sanitaria": "https://pollete48.github.io/oposiciones-datos/materias/normativa-sanitaria.json",
     "pedagogia": "https://pollete48.github.io/oposiciones-datos/materias/pedagogia.json",
     "procesal": "https://pollete48.github.io/oposiciones-datos/materias/procesal.json",
-    "seguridad-ciudadana": "https://pollete48.github.io/oposiciones-datos/materias/seguridad-ciudadana.json",
+    "seguridad-ciudadana": "https://pollete48.github.io/oposiciones-datos/materias/seguridad-ciudadana.json"
   }
 }
